--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 	<head>
-		<title>VueJs - Parcel Starter</title>
+		<title>VueJs Parcel JSX Starter</title>
 	</head>
 
 	<body>
